--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
   <fragment
     android:id="@+id/FirstFragment"
-    android:name="com.demo.pokedex.FirstFragment"
+    android:name="com.demo.pokedex.ui.views.first.FirstFragment"
     android:label="@string/first_fragment_label"
     tools:layout="@layout/fragment_first">
 
@@ -17,7 +17,7 @@
   </fragment>
   <fragment
     android:id="@+id/SecondFragment"
-    android:name="com.demo.pokedex.SecondFragment"
+    android:name="com.demo.pokedex.ui.views.second.SecondFragment"
     android:label="@string/second_fragment_label"
     tools:layout="@layout/fragment_second">
 
